Add initial implementation supporting training a feedforward network

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,11 @@
 add_executable(
     nn
     main.cpp
+    CCELossNode.cpp
+    FFNode.cpp
+    GDOptimizer.cpp
+    MNIST.cpp
+    Model.cpp
 )
+
+target_compile_features(nn PUBLIC cxx_std_17)
